--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "watch": "npm-watch"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testURL": "http://localhost:3000"
   },
   "watch": {
     "test": "{src,test}/*.js"
@@ -44,7 +44,9 @@
     "tracker",
     "analytic"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.10"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -64,6 +66,7 @@
     "flow-bin": "^0.73.0",
     "flow-copy-source": "^1.3.0",
     "jest-cli": "^23.1.0",
+    "jsdom": "^11.12.0",
     "npm-watch": "^0.3.0",
     "opn-cli": "^3.1.0",
     "prettier": "^1.11.1",
