--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   },
   "rules": {
     "flowtype-errors/show-errors": "error",
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "class-methods-use-this": "off"
   }
 }
