--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": [
     ["env", {
       "targets": {
-        "node": 6
+        "browsers": ["defaults", "ie >= 10"]
       }
     }],
     "stage-2",
