update eslint rule to allow underscore dangle

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,7 @@
     "plugin:prettier/recommended",
     "prettier/flowtype"
   ],
-  "plugins": [
-    "flowtype",
-    "flowtype-errors"
-  ],
+  "plugins": ["flowtype", "flowtype-errors"],
   "env": {
     "browser": true,
     "jest": true
@@ -17,6 +14,7 @@
   "rules": {
     "flowtype-errors/show-errors": "error",
     "import/prefer-default-export": 0,
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "no-underscore-dangle": ["error", { "allowAfterThis": true }]
   }
 }
