--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/preset-env": "7.2.3",
     "@babel/preset-flow": "^7.0.0",
     "babel-eslint": "^9.0.0",
+    "documentation": "^11.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
