--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,10 @@
     "flowtype-errors/show-errors": "error",
     "import/prefer-default-export": 0,
     "class-methods-use-this": "off",
-    "no-underscore-dangle": ["error", { "allowAfterThis": true }]
+    "no-underscore-dangle": [
+      "error",
+      { "allowAfterThis": true },
+      { "allow": ["_hsq"] }
+    ]
   }
 }
