--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "analytic"
   ],
   "dependencies": {
+    "@rentspree/cookie": "^1.0.9",
     "debug": "^3.1.0",
     "lodash": "^4.17.10"
   },
