--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rentspree/tracker",
-  "version": "0.3.7",
+  "version": "0.3.8-alpha.0",
   "description": "Tracking multiple analytics module for React",
   "license": "MIT",
   "repository": "rentspree/tracker",
