--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.3",
+    "@babel/cli": "^7.23.0",
     "@babel/core": "7.2.2",
     "@babel/preset-env": "7.2.3",
     "@babel/preset-flow": "^7.22.15",
@@ -68,7 +68,7 @@
     "jest-cli": "^29.7.0",
     "jsdom": "^22.1.0",
     "npm-watch": "^0.11.0",
-    "opn-cli": "^3.1.0",
+    "opn-cli": "^1.0.0",
     "prettier": "1.18.2",
     "rimraf": "^2.7.1",
     "standard-changelog": "^2.0.27"
