--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "watch": "npm-watch"
   },
   "jest": {
-    "testURL": "http://localhost:3000"
+    "testEnvironment": "jsdom",
+    "testEnvironmentOptions": {
+      "url": "http://localhost:3000"
+    }
   },
   "watch": {
     "test": "{src,test}/*.js"
@@ -66,6 +69,7 @@
     "flow-bin": "^0.73.0",
     "flow-copy-source": "^2.0.9",
     "jest-cli": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^22.1.0",
     "npm-watch": "^0.11.0",
     "opn-cli": "^1.0.0",
